width fix on mobile social share elements

--- a/_sass/blog/_article.scss
+++ b/_sass/blog/_article.scss
@@ -262,7 +262,7 @@
   transition: all 0.3s ease-in-out;
   @include justify-content(space-between);
   a {
-    width: calc(100%/6 - 1px);
+    width: calc(100%/5 - 1px);
   }
   @include media-query($medium){
     position: relative;
